tests/ui/traits/safety-inherent-impl.stderr
error[E0197]: inherent impls cannot be unsafe
  --> $DIR/safety-inherent-impl.rs:5:13
   |
LL | unsafe impl SomeStruct {
   | ------      ^^^^^^^^^^ inherent impl for this type
   | |
   | unsafe because of this
   |
   = note: only trait implementations may be annotated with `unsafe`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0197`.
